--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
-      - name: Run scraper
+      - name: 21f1003667@ds.study.iitm.ac.in
+
         run: | # python
           uv run --with httpx,lxml,cssselect python scrape.py
 
